--- a/src/main/resources/fxml/add.fxml
+++ b/src/main/resources/fxml/add.fxml
@@ -1,34 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="376.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="701.0" style="-fx-background-color: #111111;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.dashController">
    <children>
-      <Line endX="306.8333435058594" endY="1.52587890625E-5" layoutX="98.0" layoutY="213.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="306.8333435058594" endY="1.52587890625E-5" layoutX="108.0" layoutY="1.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="-52.5" endY="172.79290771484375" layoutX="54.0" layoutY="99.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="-52.5" endY="172.79290771484375" layoutX="428.0" layoutY="109.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="2.0" />
-      <ImageView fitHeight="109.0" fitWidth="79.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="657.0" fitWidth="1200.0" layoutX="51.0" layoutY="-44.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../resources/error.png" />
+            <Image url="@../icons/bg_add.png" />
          </image>
       </ImageView>
-      <Label layoutX="128.0" layoutY="52.0" prefHeight="87.0" prefWidth="198.0" text="The entry you are about to add will no longer be added since it is already exisiting in the database." textFill="WHITE" wrapText="true">
+      <Text fill="WHITE" layoutX="51.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add an entry">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="21.0" />
          </font>
-      </Label>
-      <Button fx:id="btnHome" contentDisplay="TOP" layoutX="201.0" layoutY="214.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="119.0" styleClass="button3" stylesheets="@../css/fullpackstyling.css" text="OK" textFill="#e5e9f0">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Button>
+      </Text>
+      <Pane layoutX="48.0" layoutY="91.0" prefHeight="340.0" prefWidth="418.0" style="-fx-background-color: #212426; -fx-background-radius: 5;">
+         <children>
+            <Text fill="WHITE" layoutX="27.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="27.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SAIS ID">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="199.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Number">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="26.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+            <TextArea layoutX="27.0" layoutY="243.0" prefHeight="64.0" prefWidth="200.0" />
+            <TextField layoutX="25.0" layoutY="45.0" prefHeight="25.0" prefWidth="253.0" style="-fx-background-color: #1a1d20; -fx-border-color: #6a7281; -fx-border-radius: 5;" styleClass="TextField" stylesheets="@css/fullpackstyling.css" />
+            <TextField layoutX="25.0" layoutY="105.0" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: #1a1d20; -fx-border-color: #6a7281; -fx-border-radius: 5;" styleClass="TextField" stylesheets="@css/fullpackstyling.css" />
+            <TextField layoutX="195.0" layoutY="106.0" prefHeight="25.0" prefWidth="165.0" style="-fx-background-color: #1a1d20; -fx-border-color: #6a7281; -fx-border-radius: 5;" styleClass="TextField" stylesheets="@css/fullpackstyling.css" />
+            <TextField layoutX="23.0" layoutY="167.0" prefHeight="64.0" prefWidth="337.0" style="-fx-background-color: #1a1d20; -fx-border-color: #6a7281; -fx-border-radius: 5;" styleClass="TextField" stylesheets="@css/fullpackstyling.css" />
+            <Button fx:id="saveAdd" contentDisplay="TOP" layoutX="284.0" layoutY="292.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="119.0" styleClass="button4" stylesheets="@css/fullpackstyling.css" text="Save" textFill="#e5e9f0">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Button>
+            <Text fill="#ff6767" layoutX="67.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Characters only">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+            <Text fill="#ff6767" layoutX="76.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numbers only">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+            <Text fill="#ff6767" layoutX="301.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numbers only">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
    </children>
 </Pane>
