--- a/src/main/resources/fxml/css/fullpackstyling.css
+++ b/src/main/resources/fxml/css/fullpackstyling.css
@@ -5,7 +5,7 @@
 .button1:pressed
 {
 -fx-background-color : #111316;
--fx-border-color: 4px solid #337ffe;
+-fx-border-color: #337ffe;
 }
 .button1:focused
 {
@@ -28,121 +28,67 @@
 
 .button3
 {
-    -fx-background-color : #005eff;
+    -fx-background-color : #212426;
 }
 .button3:hover
 {
-    -fx-background-color : #524A7B ;
+    -fx-background-color : #0d1f3f ;
 }
 .button3:pressed
 {
-    -fx-background-color : #2F2B43 ;
+    -fx-background-color : #15366b ;
     
 }
 
 .button4
 {
-    -fx-background-color :linear-gradient(to top left, #41951C, #D4CEE3);
-    -fx-background-radius :  30 30 30 30;
+    -fx-background-color : #337ffe;
+    -fx-border-width: 2; 
+    -fx-border-color: #337ffe;
+    -fx-border-radius: 3;
 }
 .button4:hover
 {
-    -fx-background-color :linear-gradient(to top left, #D4CEE3, #41951C);
-    -fx-background-radius :  30 30 30 30;
+    -fx-background-color : #2966cc ;
+    -fx-border-width: 2; 
+    -fx-border-color: #2966cc;
 }
 .button4:pressed
 {
-    -fx-background-color :linear-gradient(to top left, #41951C, #D4CEE3);
-    -fx-background-radius :  30 30 30 30;
+    -fx-background-color : #1f4c99 ;
+    -fx-border-width: 2; 
+    -fx-border-color: #1f4c99;
 }
 
-
-.combo-box
+.TextField
 {
-    -fx-background-color : #141124;
-    -fx-border-color:  #515658;
-    -fx-border-radius: 30;
-}
-.combo-box:hover
-{
-    -fx-background-color : #141124;
-    -fx-border-color:  #FFFF;
-    -fx-border-radius: 30;
-}
-.combo-box:pressed
-{
-    -fx-background-color : #141124;
-    -fx-border-color:  #FFFF;
-    -fx-border-radius: 30;
+    -fx-text-fill : #eff1f9;
 }
 
-.table-view .column-header,
-.table-view .column-header-background .filler {
-    -fx-cell-size : 20;
-    -fx-background-color:   #2D75E8;
-}
-.table-view .column-header .label{
 
-   -fx-text-fill: white;
-   -fx-font-weight: bold;
-   -fx-alignment: CENTER_LEFT;
-}
-.table-view .cell{
-   -fx-cell-size: 30;
-  -fx-alignment: center-left;
-  -fx-text-fill: #000000;
+.scroll-pane {
+    -fx-background-color: #111111;
 }
 
-.table-row-cell:selected {
-    -fx-background-color:  rgb(127, 172, 243);
- }
- .table-row-cell:selected .text {
-        -fx-fill : white ;
-
- }
-/* scroll bar starts here */
-
-/* The increment and decrement button CSS class of scrollbar */
-.table-view .increment-button ,.table-view .decrement-button {
+.scroll-bar:vertical{
     -fx-background-color:transparent;
-	-fx-background-radius: 2em;
-
 }
 
-/* The main scrollbar **track** CSS class  */
-.table-view .scroll-bar:horizontal .track,
-.table-view .scroll-bar:vertical .track{
-	-fx-background-color: transparent;
-	-fx-border-color:derive(  #2D75E8,80%);
-	-fx-background-radius: 2em;
-	-fx-border-radius:2em;
-}
-
-/* The main scrollbar **thumb** CSS class which we drag every time (movable) */
-.table-view .scroll-bar:horizontal .thumb,
-.table-view .scroll-bar:vertical .thumb {
-    -fx-background-color:derive( #2D75E8,90%);
-	-fx-background-insets: 2, 0, 0;
-	-fx-background-radius: 2em;
-
-}
-
-/* chart properties */
-
-.chart {
-    -fx-padding: 10px;
+.increment-button, .decrement-button {
     -fx-background-color: transparent;
-    -fx-legend-visible: false;
+    -fx-border-color: transparent;
 }
-.chart-plot-background {
-    -fx-background-color:transparent;
+.scroll-bar:vertical .track{
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0em;
 }
 
-.chart-pie {
-    -fx-border-color: derive(-fx-pie-color, 1%);
-    -fx-border-width: 0px;
+.scroll-bar:vertical .thumb {
+    -fx-background-color: #337ffe;
+    /*-fx-background-radius: 5em;*/
 }
-.linear-grad
-{
-    -fx-background-color: linear-gradient(to bottom left, #A868A0, #2D75E8);
+
+.scroll-pane > .corner {
+    -fx-background-color: #111111;
 }
