--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="701.0" style="-fx-background-color: #111111;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="701.0" style="-fx-background-color: #111111;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fitHeight="601.0" fitWidth="939.0" layoutX="-11.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/homepageBG.png" />
+         </image>
+      </ImageView>
+      <ImageView id="btnHome" fitHeight="480.0" fitWidth="730.0" layoutX="-21.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+         <image>
+            <Image url="@../icons/homepageDESC.png" />
+         </image>
+      </ImageView>
+   </children>
+</Pane>
