--- a/src/main/resources/fxml/confirm_delete.fxml
+++ b/src/main/resources/fxml/confirm_delete.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="437.0" prefWidth="402.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="437.0" prefWidth="402.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.dashController">
    <children>
       <Pane layoutX="2.0" layoutY="-11.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="457.0" style="-fx-background-color: #212426;">
          <children>
@@ -22,7 +22,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button id="btnClose" contentDisplay="TOP" layoutX="354.0" layoutY="10.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="44.0" style="-fx-background-color: #212426;" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
+            <Button id="btnClose" fx:id="btnDialogclose" contentDisplay="TOP" layoutX="354.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="43.0" prefWidth="44.0" styleClass="button6" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
                <graphic>
                   <ImageView fitHeight="14.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -33,36 +33,36 @@
             </Button>
          </children>
       </Pane>
-      <Pane layoutX="2.0" layoutY="374.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="561.0" style="-fx-background-color: #212426;">
+      <Pane layoutX="2.0" layoutY="385.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="561.0" style="-fx-background-color: #212426;">
          <children>
-            <Button fx:id="btnHome1" contentDisplay="TOP" layoutX="113.0" layoutY="9.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #212426;" styleClass="button4" stylesheets="@css/fullpackstyling.css" text="Cancel" textFill="#e5e9f0">
+            <Button fx:id="btnOK" contentDisplay="TOP" layoutX="113.0" layoutY="9.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #212426;" styleClass="button4" stylesheets="@css/fullpackstyling.css" text="Cancel" textFill="#e5e9f0">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
          </children></Pane>
       <Line endX="306.8333435058594" endY="1.52587890625E-5" layoutX="108.0" layoutY="1.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="98.0" layoutY="232.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="-52.49998092651367" endY="208.04534912109375" layoutX="54.0" layoutY="99.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="-52.5" endY="172.79290771484375" layoutX="454.0" layoutY="109.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="2.0" />
+      <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="98.0" layoutY="385.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
+      <Line endX="-52.5" endY="359.63116455078125" layoutX="53.0" layoutY="100.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="3.0" />
+      <Line endX="-52.5" endY="344.29779052734375" layoutX="454.0" layoutY="109.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="3.0" />
       <ImageView fitHeight="109.0" fitWidth="79.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../resources/error.png" />
          </image>
       </ImageView>
-      <Label layoutX="128.0" layoutY="138.0" prefHeight="87.0" prefWidth="264.0" text="The deletion of this entry will be forever permanent." textFill="WHITE" wrapText="true">
+      <Label layoutX="124.0" layoutY="292.0" prefHeight="87.0" prefWidth="264.0" text="The deletion of this entry will be forever permanent." textFill="WHITE" wrapText="true">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnHome" contentDisplay="TOP" layoutX="249.0" layoutY="242.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #337ffe;" styleClass="button3" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
+      <Button fx:id="actionDelete" contentDisplay="TOP" layoutX="248.0" layoutY="394.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="30.0" prefWidth="119.0" styleClass="button4" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Button>
       <Line endX="306.8333435058594" endY="1.52587890625E-5" layoutX="108.0" layoutY="41.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="108.0" layoutY="284.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <ImageView fitHeight="72.0" fitWidth="126.0" layoutX="32.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
+      <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="108.0" layoutY="435.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
+      <ImageView fitHeight="72.0" fitWidth="126.0" layoutX="32.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../icons/confirmation.png" />
          </image>
@@ -70,6 +70,46 @@
       <Label layoutX="124.0" layoutY="55.0" prefHeight="103.0" prefWidth="228.0" text="Are you sure in deleting this entry?" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="21.0" />
+         </font>
+      </Label>
+      <Label layoutX="124.0" layoutY="172.0" text="Name :" textFill="#828282">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="124.0" layoutY="203.0" text="SAIS ID :" textFill="#828282">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="124.0" layoutY="234.0" text="Student Number :" textFill="#828282">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="124.0" layoutY="265.0" text="Address :" textFill="#828282">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="nameDelete" layoutX="180.0" layoutY="172.0" prefHeight="20.0" prefWidth="180.0" text="Name1" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="saisDelete" layoutX="186.0" layoutY="203.0" prefHeight="20.0" prefWidth="172.0" text="12301238129381023" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="stunumDelete" layoutX="246.0" layoutY="234.0" prefHeight="20.0" prefWidth="110.0" text="12301238129381023" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="addressDelete" layoutX="192.0" layoutY="265.0" prefHeight="20.0" prefWidth="172.0" text="124124 sdfsdfs sdfsdf sdfsdfsdf sdfsdfsdfsdfs sdfsdf " textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
    </children>
