--- a/src/main/resources/fxml/notif_savedchanges.fxml
+++ b/src/main/resources/fxml/notif_savedchanges.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="402.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="402.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.dashController">
    <children>
       <Pane layoutX="2.0" layoutY="-11.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="457.0" style="-fx-background-color: #212426;">
          <children>
@@ -22,7 +22,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button id="btnClose" contentDisplay="TOP" layoutX="354.0" layoutY="10.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="44.0" style="-fx-background-color: #212426;" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
+            <Button id="btnClose" fx:id="btnDialogclose" contentDisplay="TOP" layoutX="354.0" layoutY="10.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="44.0" style="-fx-background-color: #212426;" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
                <graphic>
                   <ImageView fitHeight="14.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -36,8 +36,8 @@
       <Pane layoutX="2.0" layoutY="233.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="561.0" style="-fx-background-color: #212426;" />
       <Line endX="306.8333435058594" endY="1.52587890625E-5" layoutX="108.0" layoutY="1.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
       <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="98.0" layoutY="232.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="-52.49998092651367" endY="208.04534912109375" layoutX="54.0" layoutY="99.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="-52.5" endY="172.79290771484375" layoutX="454.0" layoutY="109.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="2.0" />
+      <Line endX="-52.49998092651367" endY="208.04534912109375" layoutX="53.0" layoutY="99.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="3.0" />
+      <Line endX="-52.5" endY="172.79290771484375" layoutX="454.0" layoutY="109.0" startX="-52.5" startY="-129.62132263183594" stroke="#34373a" strokeWidth="3.0" />
       <ImageView fitHeight="109.0" fitWidth="79.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../resources/error.png" />
@@ -48,13 +48,13 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnHome" contentDisplay="TOP" layoutX="249.0" layoutY="242.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #337ffe;" styleClass="button3" stylesheets="@css/fullpackstyling.css" text="OK" textFill="#e5e9f0">
+      <Button fx:id="btnOK" contentDisplay="TOP" layoutX="249.0" layoutY="242.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #337ffe;" styleClass="button3" stylesheets="@css/fullpackstyling.css" text="OK" textFill="#e5e9f0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Button>
       <Line endX="306.8333435058594" endY="1.52587890625E-5" layoutX="108.0" layoutY="41.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
-      <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="108.0" layoutY="284.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
+      <Line endX="475.12615966796875" endY="4.57763671875E-5" layoutX="108.0" layoutY="279.0" startX="-119.873779296875" startY="1.52587890625E-5" stroke="#34373a" strokeWidth="2.0" />
       <ImageView fitHeight="72.0" fitWidth="126.0" layoutX="32.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../icons/success.png" />
