--- a/src/main/resources/fxml/DatabaseEntry.fxml
+++ b/src/main/resources/fxml/DatabaseEntry.fxml
@@ -25,7 +25,7 @@
             <Font size="13.0" />
         </font>
     </Text>
-    <Button fx:id="btnDelete" contentDisplay="TOP" layoutX="558.0" layoutY="9.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="27.0" prefWidth="63.0" styleClass="button5" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
+    <Button fx:id="btn" contentDisplay="TOP" layoutX="558.0" layoutY="9.0" mnemonicParsing="false"  prefHeight="27.0" prefWidth="63.0" styleClass="button5" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
         <font>
             <Font name="System Bold" size="13.0" />
         </font>
