--- a/src/main/resources/fxml/DatabaseEntry.fxml
+++ b/src/main/resources/fxml/DatabaseEntry.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<fx:root type="javafx.scene.layout.Pane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="542.0" style="-fx-background-color: #212426; -fx-background-radius: 5;" xmlns:fx="http://javafx.com/fxml">
+<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="542.0" style="-fx-background-color: #212426; -fx-background-radius: 5;" type="javafx.scene.layout.Pane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18">
     <Text fx:id="name" fill="WHITE" layoutX="19.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
         <font>
             <Font size="13.0" />
@@ -25,10 +26,9 @@
             <Font size="13.0" />
         </font>
     </Text>
-    <Button fx:id="btn" contentDisplay="TOP" layoutX="558.0" layoutY="9.0" mnemonicParsing="false"  prefHeight="27.0" prefWidth="63.0" styleClass="button5" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
+    <Button fx:id="btn" contentDisplay="TOP" layoutX="558.0" layoutY="7.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="63.0" styleClass="button5" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
         <font>
             <Font name="System Bold" size="13.0" />
         </font>
     </Button>
 </fx:root>
-
