--- a/src/main/resources/fxml/DashFX.fxml
+++ b/src/main/resources/fxml/DashFX.fxml
@@ -14,9 +14,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import MP.components.DatabaseEntry?>
-
-
 <AnchorPane prefHeight="621.0" prefWidth="815.0" style="-fx-background-radius: 20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.dashController">
    <children>
       <VBox prefHeight="644.0" prefWidth="117.0" style="-fx-background-color: #212426;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -276,7 +273,7 @@
                   </ScrollPane>
                   <Line endX="609.6666870117188" endY="141.00001525878906" layoutX="-3.0" layoutY="-3.0" startX="609.6666870117188" startY="580.3333740234375" stroke="#111111" />
                   <TextField accessibleRole="PARENT" layoutX="291.0" layoutY="47.0" prefHeight="28.0" prefWidth="310.0" style="-fx-background-color: #1a1d20; -fx-border-color: #6a7281; -fx-border-radius: 5;" styleClass="TextField" stylesheets="@css/fullpackstyling.css" />
-                  <Button id="btnHelp" fx:id="searchFunction" contentDisplay="TOP" layoutX="292.0" layoutY="48.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleClicks" prefHeight="25.0" prefWidth="29.0" style="-fx-border-radius: 10;" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
+                  <Button id="btnHelp" fx:id="searchFunction" contentDisplay="TOP" layoutX="292.0" layoutY="48.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#keyPress" prefHeight="25.0" prefWidth="29.0" style="-fx-border-radius: 10;" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
                      <graphic>
                         <ImageView fitHeight="14.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -509,41 +506,12 @@
             </Pane>
             <Pane fx:id="helpPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="701.0" style="-fx-background-color: #111111;" visible="false">
                <children>
-                  <Text fill="WHITE" layoutX="51.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Hi, How can we help you?">
-                     <font>
-                        <Font name="System Bold" size="21.0" />
-                     </font>
-                  </Text>
                   <Line endX="609.6666870117188" endY="141.00001525878906" layoutX="73.0" layoutY="-3.0" startX="609.6666870117188" startY="580.3333740234375" stroke="#111111" />
-                  <Pane layoutX="48.0" layoutY="94.0" prefHeight="45.0" prefWidth="630.0" style="-fx-background-color: #1a1d20; -fx-background-radius: 5; -fx-border-color: #6a7281;">
-                     <children>
-                        <Text fill="WHITE" layoutX="19.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
-                           <font>
-                              <Font size="13.0" />
-                           </font>
-                        </Text>
-                        <Text fill="WHITE" layoutX="115.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SAIS ID">
-                           <font>
-                              <Font size="13.0" />
-                           </font>
-                        </Text>
-                        <Text fill="WHITE" layoutX="201.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Number">
-                           <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font>
-                        </Text>
-                        <Text fill="WHITE" layoutX="326.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
-                           <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font>
-                        </Text>
-                        <Text fill="WHITE" layoutX="574.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Action">
-                           <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </Pane>
+                  <ImageView fitHeight="554.0" fitWidth="699.0" layoutX="16.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../icons/helpGuide.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
          </children>
