--- a/src/main/resources/fxml/notif_add_success.fxml
+++ b/src/main/resources/fxml/notif_add_success.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="402.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.dashController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="402.0" style="-fx-background-color: #1a1d20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.DashController">
    <children>
       <Pane layoutX="2.0" layoutY="-11.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="457.0" style="-fx-background-color: #212426;">
          <children>
@@ -22,7 +22,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button id="btnClose" fx:id="btnDialogclose" contentDisplay="TOP" layoutX="354.0" layoutY="10.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="44.0" style="-fx-background-color: #212426;" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
+            <Button id="btnClose" fx:id="btnDialogclose" contentDisplay="TOP" layoutX="354.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="43.0" prefWidth="44.0" styleClass="button6" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
                <graphic>
                   <ImageView fitHeight="14.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -43,12 +43,12 @@
             <Image url="@../resources/error.png" />
          </image>
       </ImageView>
-      <Label layoutX="128.0" layoutY="138.0" prefHeight="87.0" prefWidth="264.0" text="Check view for the saved changes" textFill="WHITE" wrapText="true">
+      <Label layoutX="128.0" layoutY="124.0" prefHeight="87.0" prefWidth="264.0" text="Check view for the saved changes" textFill="WHITE" wrapText="true">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnOK" contentDisplay="TOP" layoutX="249.0" layoutY="242.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="119.0" style="-fx-background-color: #337ffe;" styleClass="button3" stylesheets="@css/fullpackstyling.css" text="OK" textFill="#e5e9f0">
+      <Button fx:id="btnConfirm" contentDisplay="TOP" layoutX="249.0" layoutY="240.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="30.0" prefWidth="119.0" styleClass="button4" stylesheets="@css/fullpackstyling.css" text="OK" textFill="#e5e9f0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -60,7 +60,7 @@
             <Image url="@../icons/success.png" />
          </image>
       </ImageView>
-      <Label layoutX="124.0" layoutY="55.0" prefHeight="103.0" prefWidth="228.0" text="Changes to this entry has been successfully saved" textFill="WHITE" wrapText="true">
+      <Label layoutX="124.0" layoutY="55.0" prefHeight="87.0" prefWidth="228.0" text="This entry has been successfully added." textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
