--- a/src/main/resources/fxml/DashFX.fxml
+++ b/src/main/resources/fxml/DashFX.fxml
@@ -546,7 +546,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button id="btnHelp" fx:id="btnHelp" contentDisplay="TOP" layoutX="677.0" layoutY="-1.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="51.0" prefWidth="46.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0">
+            <Button id="btnHelp" fx:id="btnHelp" contentDisplay="TOP" layoutX="677.0" layoutY="-1.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="51.0" prefWidth="46.0" styleClass="button2" stylesheets="@css/fullpackstyling.css" textFill="#e5e9f0" visible="false">
                <graphic>
                   <ImageView fitHeight="27.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                      <image>
